# newmaz

./: .gitignore  README.md  generate.sh  main.py  pysideapp.py  requirements.txt  startapp.bat  startapp.sh  tkapp.py
rustmaz/: Cargo.toml  data.txt
rustmaz/src/: lib.rs  main.rs
