[package]
name = "rustmaz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-pickle = "1.1.1"
serde = { version = "1.0.139", features = ["derive"] }
serde_derive = "1.0.139"
rand = "0.8.5"