[package]
name = "rustmaz"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustmaz"
crate-type = ["cdylib"]

[dependencies]
serde-pickle = "1.1.1"
serde = { version = "1.0.139", features = ["derive"] }
serde_derive = "1.0.139"
rand = "0.8.5"
pyo3 = { version = "0.16.5", features = ["extension-module"] }